# mcp-demo-server-otel

./: README.md  config.py  main.py  pyproject.toml
scripts/: render-build.sh  render-start.sh
src/: client.py  tracing.py
